--- a/src/main/webapp/inward/inward_admission.xhtml
+++ b/src/main/webapp/inward/inward_admission.xhtml
@@ -82,7 +82,7 @@
                                             </p:calendar>     
 
                                             <p:watermark value="Referring Doctor Speciality" for="acRefDocSpe" ></p:watermark>
-                                            <p:watermark value="Referrin Doctor" for="acRefDoc" ></p:watermark>
+                                            <p:watermark value="Referring Doctor" for="acRefDoc" ></p:watermark>
 
                                             <h:outputLabel value="Referring Doctor Speciality"/>
                                             <p:autoComplete forceSelection="true" id="acRefDocSpe"
