--- a/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_reports_index.xhtml
@@ -86,7 +86,7 @@
                                         <p:commandButton styleClass="linkButton" value="Department Stock By Batch to Upload" action="pharmacy_department_stock_by_batch_toupload" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Item-vice Purchase/Good Receive" action="/pharmacy/report_item_vice_purchase_and_good_receive" ajax="false" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" value="Purcharse bill with suppleir" action="/pharmacy/pharmacy_search_purcharse_bill" ajax="false" ></p:commandButton>
-                                        <p:commandButton styleClass="linkButton" value="Pharmacy GRN Report" action="pharmacy_search_purcharse_bill_1" ajax="false" ></p:commandButton>                            
+                                        <p:commandButton styleClass="linkButton" value="Pharmacy GRN Reportfff" action="pharmacy_search_purcharse_bill_1" ajax="false" ></p:commandButton>                            
                                         <p:commandButton styleClass="linkButton" value="Pharmacy GRN and purchase Report" action="pharmacy_search_purcharse_GRN_bill" ajax="false" ></p:commandButton>                            
                                     </h:panelGrid>
                                 </p:panel>
