--- a/src/main/webapp/pharmacy/pharmacy_search_pre_bill_not_paid.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_search_pre_bill_not_paid.xhtml
@@ -11,11 +11,13 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel header="Pharmacy Bills Not Paid" >
+                        <p:poll interval="30"   
+                                listener="#{searchController.createPreBillsNotPaid()}" update="@all" />
                         <f:facet name="header" >
 
                             <h:panelGrid columns="5" style="min-width: 100%;" >
                                 <p:commandButton ajax="false" value="Refresh" 
-                                                actionListener="#{searchController.createPreBillsNotPaid()}"/>
+                                                 actionListener="#{searchController.createPreBillsNotPaid()}"/>
                                 <p:commandButton ajax="false" value="Add To Stock" action="#{searchController.addToStock}" 
                                                  disabled="#{!webUserController.hasPrivilege('PharmacyReAddToStock')}"/>
                             </h:panelGrid>
