--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -36,6 +36,8 @@
                                                      value="2) GRN Summary By Supplier" action="pharmacy_report_grn_detail_by_supplier.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
                                     <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
                                                      value="3) GRN Bill Item Report" action="/pharmacy/pharmacy_report_grn_billitem.xhtml" actionListener="#{pharmacySaleReport.makeNull}"></p:commandButton>
+                                    <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
+                                                     value="4) GRN Registory" action="/pharmacy/pharmacy_report_grn_registory.xhtml" ></p:commandButton>
                                 </p:panel>
                                 <p:panel header="7) DEAPRTMENT ISSUE" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <p:commandButton styleClass="linkButton" ajax="false" style="text-align: left"
