--- a/src/main/webapp/admin/bill_contact_numbers_1.xhtml
+++ b/src/main/webapp/admin/bill_contact_numbers_1.xhtml
@@ -39,10 +39,7 @@
                 <p:dataTable value="#{searchController.telephoneNumbers}" var="b" id="tb1" rowIndexVar="i"
                              rowKey="#{b}" 
                              rows="#{searchController.rows}"
-                             selection="#{searchController.selectedTelephoneNumbers}"
-                             paginator="true"
-                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                             rowsPerPageTemplate="20, 50, 100">
+                             selection="#{searchController.selectedTelephoneNumbers}" >
 
                     <f:facet name="header" >
                         <p:outputLabel value="Contact Numbers - #{searchController.telephoneNumbers.size()}" />                                
