--- a/src/main/webapp/channel/institutions.xhtml
+++ b/src/main/webapp/channel/institutions.xhtml
@@ -33,7 +33,7 @@
 
                                         <p:selectOneListbox  id="lstSelect"   value="#{institutionController.agency}" style="min-width: 223px; height: 300px;">
                                             <f:selectItems  value="#{institutionController.selectedAgencies}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name} (#{myItem.institutionCode })" ></f:selectItems>
-                                            <p:ajax event="change"   update="gpDetail" process="lstSelect" >
+                                            <p:ajax event="change"   update="gpDetail gpSelectButtons" process="lstSelect" >
                                             </p:ajax>
                                         </p:selectOneListbox>
 
@@ -43,7 +43,7 @@
                                         <h:commandButton id="btnAdd" value="Add" action="#{institutionController.prepareAddAgency()}" styleClass="buttons" >
                                         </h:commandButton>
 
-                                        <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
+                                        <h:commandButton disabled="#{institutionController.agency.id eq 20385287}" id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
                                                     return false;" action="#{institutionController.deleteAgency}"  value="Delete"  >
                                         </h:commandButton>
 
