--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -87,6 +87,10 @@
                                                          value="(11) Staff Salary Generate Or Delete Detail Report" 
                                                          styleClass="linkButton"
                                                          actionListener="#{hrReportController.makeNull()}"  />
+                                        <p:commandButton ajax="false" action="/hr/hr_report_grativity"
+                                                         value="(12) Staff Gratuity" 
+                                                         styleClass="linkButton"
+                                                         actionListener="#{hrReportController.makeNull()}"  />
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="(4) Shift" style="width: 400px;margin: auto;" collapsed="true" toggleable="true" rendered="#{webUserController.hasPrivilege('HrReportsLevel3')}" >
