--- a/src/main/webapp/store/store_admin.xhtml
+++ b/src/main/webapp/store/store_admin.xhtml
@@ -24,6 +24,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="4) Import from Excel" action="store_item_import" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="5) Import list of items with stock from Excel" action="store_item_import_with_stock" ></p:commandButton>
                                         <p:commandButton styleClass="linkButton" ajax="false" value="6) Import list of items and categories from Excel" action="store_item_import_with_category" ></p:commandButton>
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="7) Manufacturers" action="/pharmacy/pharmacy_manufacturer" ></p:commandButton>
                                     </h:panelGrid>
                                 </p:panel>
                                 <p:panel header="4) Other" style="width: 400px;margin: auto;" collapsed="true" toggleable="true">
